<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent_layout"
    android:layout_height="match_parent"
    tools:context=".ui.login.EnterOTPActivity">

    <ImageView
        android:id="@+id/backView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/enterMobileGuideline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_background_star"
        android:src="@drawable/bg_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_logo"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enterMobileGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/enterMobileGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:fontFamily="@font/roboto_regular"
        android:text="OTP has been sent to 9988998877"
        android:textColor="@color/color_text_primary"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <TextView
        android:id="@+id/editTextView"
        style="@style/ClickableText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="Edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/label_enter_otp"
        android:textColor="@color/color_text_primary"
        app:drawableLeftCompat="@drawable/ic_mobile_otp"
        app:drawableStartCompat="@drawable/ic_mobile_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_goneMarginRight="40dp">

        <EditText
            android:id="@+id/otp_1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_padding_16"
            android:layout_weight="1"
            android:digits="0123456789"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="32sp" >
        <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/otp_2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding_16"
            android:layout_marginEnd="@dimen/activity_padding_16"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/otp_3_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding_16"
            android:layout_marginEnd="@dimen/activity_padding_16"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/otp_4_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_padding_16"
            android:layout_marginEnd="@dimen/activity_padding_16"
            android:layout_weight="1"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="32sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/color_text_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/resendOTPButton"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/resendOTPButton"
        style="@style/TextAppearance.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.8"
        android:text="@string/label_resend_otp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/ButtonStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onConfirmClick"
        android:text="@string/label_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendOTPButton" />

</androidx.constraintlayout.widget.ConstraintLayout>