<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.EnterMobileNumberActivity">

    <ImageView
        android:id="@+id/backView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_back"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/enterMobileGuideline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/signUpView"
        style="@style/TextAppearance.Title3"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="Sign Up"
        android:onClick="onSignUpClick"
        app:layout_constraintBottom_toTopOf="@+id/enterMobileGuideline"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_background_star"
        android:src="@drawable/bg_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_logo"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enterMobileGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/enterMobileGuideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Mobile Number"
        android:textColor="@color/color_text_primary"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_mobile_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <EditText-->
<!--        android:id="@+id/countryCodeEditText"-->
<!--        style="@style/TextAppearance.Title"-->
<!--        android:layout_width="65dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="40dp"-->
<!--        android:layout_marginLeft="40dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:background="@null"-->
<!--        android:focusable="false"-->
<!--        android:focusableInTouchMode="true"-->
<!--        android:inputType="phone"-->
<!--        android:text="+91"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <TextView
        android:id="@+id/mobileNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:inputType="phone"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/color_text_secondary"
        android:textSize="32sp"
        android:text="+91 9089098098"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/getOTPButton"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onGetOTPClick"
        android:text="@string/label_get_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberText" />


</androidx.constraintlayout.widget.ConstraintLayout>