<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parent_layout"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/cancelView"
                style="@style/TextAppearance.Title3"
                android:layout_marginLeft="20dp"
                android:onClick="onCancelClick"
                android:text="Cancel"
                app:layout_constraintBottom_toTopOf="@+id/enterMobileGuideline"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/backgroundImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_background_star"
                android:src="@drawable/bg_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/img_logo"
                android:contentDescription="@string/content_description_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/enterMobileGuideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/enterMobileGuideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="?attr/actionBarSize" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/label_register"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/logoView" />

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Mobile Number 9988778899"
                android:textColor="@color/color_text_primary"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_mobile_green"
                app:drawableStartCompat="@drawable/ic_mobile_green"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/editTextView"
                style="@style/ClickableText"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label1"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteY="315dp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_padding_16"
                android:orientation="vertical"
                android:paddingLeft="44dp"
                android:paddingRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label1">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="-8dp"
                    app:boxBackgroundColor="@color/white"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Hint"
                    app:hintTextColor="@color/color_text_secondary">

                    <EditText
                        android:id="@+id/name_text"
                        style="@style/TextAppearance.Title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="-8dp"
                    app:boxBackgroundColor="@color/white"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Hint"
                    app:hintTextColor="@color/color_text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/email_text"
                        style="@style/TextAppearance.Title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="-8dp"
                    app:boxBackgroundColor="@color/white"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Hint"
                    app:hintTextColor="@color/color_text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_text_primary">

                    <EditText
                        android:id="@+id/password_text"
                        style="@style/TextAppearance.Title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:onClick="onPasswordCriteriaClick"
                    android:text="Password Strength"
                    android:textColor="@color/color_text_primary"
                    android:textSize="12sp"
                    app:drawableRightCompat="@drawable/ic_info" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="-8dp"
                    app:boxBackgroundColor="@color/white"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.TextInputLayout.Hint"
                    app:hintTextColor="@color/color_text_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_text_primary">

                    <EditText
                        android:id="@+id/confirm_password_text"
                        style="@style/TextAppearance.Title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioButton
                    android:id="@+id/terms_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:button="@null"
                    android:drawableStart="@drawable/ic_unchek"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="I agree to the Terms and Conditions"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                style="@style/ButtonStyle"
                android:layout_width="150dp"
                android:layout_height="?android:actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="40dp"
                android:onClick="onRegisterClick"
                android:text="Register"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="44dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>